--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: serex
 Title: StreetEasy-styled wrapper around xlsx package
-Version: 0.0.0.9003
+Version: 0.0.0.9010
 Authors@R: person("Philipp", "Kats", email = "philippk@zillowgroup.com", role = c("aut", "cre"))
 Description: A simple and rudimentary wrapper around xlsx: writes SE_style excel
     tables with all formatting, logo, etc.
@@ -17,8 +17,8 @@ Collate:
     'xlsx.background.R'
     'addDataSheet.R'
     'borderStyles.R'
-    'saveSE.R'
     'xlsx.addTitle.R'
     'setStyles.R'
-    'serex.R'
+    'createSE.R'
+    'saveSE.R'
     'zzz.R'
